objects/MP_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_meeting__c</fullName>
        <label>Date of meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_meeting_occur__c</fullName>
        <label>Did meeting occur?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Relationship__c</fullName>
        <label>MP Relationship</label>
        <referenceTo>MP_Relationship__c</referenceTo>
        <relationshipLabel>MP Meetings</relationshipLabel>
        <relationshipName>MP_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_number__c</fullName>
        <label>Meeting number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_summary__c</fullName>
        <label>Meeting summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MP Meeting</label>
    <nameField>
        <displayFormat>MPM Ref-{000000}</displayFormat>
        <label>MP Meetings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MP Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>